--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "@fontsource/plus-jakarta-sans": "5.0.20",
     "@fontsource/roboto-mono": "5.0.18",
     "@hookform/resolvers": "3.6.0",
-    "@mui/icons-material": "^7.1.0",
+    "@mui/icons-material": "5.11.16",
     "@mui/lab": "5.0.0-alpha.170",
     "@mui/material": "5.15.20",
     "@mui/system": "5.15.20",
     "@mui/utils": "5.15.20",
-    "@mui/x-date-pickers": "7.7.1",
+    "@mui/x-date-pickers": "5.0.0",
     "@phosphor-icons/react": "2.1.6",
     "apexcharts": "3.49.2",
     "axios": "^1.9.0",
